# M68KSimulator

./: .gitignore  CMakeLists.txt  LICENSE.txt
Simulator/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  Helpers.cpp  Helpers.hpp  Simulator.cpp  Simulator.h
Simulator/Assembly/: .gitignore  Header.asm
Simulator/Opcodes/: Opcode.cpp  Opcode.hpp
Simulator/includes/: BitMaskEnums.hpp  Opcodes.inc
Tests/: CMakeLists.txt  M68KTests.cpp  main.cpp
